# ohhi-tools

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
ohhi-data/: Cargo.toml
src/: main.rs
src/bruteforcer/: Cargo.toml
src/bruteforcer/src/: lib.rs  main.rs  thread_pool.rs
src/bruteforcer/tests/: thread_pool.rs
src/ohhi-app/: Cargo.toml
src/ohhi-app/src/: analysis.rs  history.rs  lib.rs  play.rs  practice.rs  timer.rs  trace.rs
src/ohhi-app/tests/: analysis.rs  history.rs  play.rs  play_completion.rs  practice.rs  timer.rs  trace.rs
src/ohhi-core/: Cargo.toml
src/ohhi-core/src/: bit_board.rs  board.rs  lib.rs  randomizer.rs  seed.rs  stats.rs  validator.rs  visualizer.rs
src/ohhi-core/tests/: bit_board.rs  seed.rs  stats.rs  validator.rs
src/ohhi-data/: Cargo.toml
src/ohhi-data/src/: catalog.rs  lib.rs  metrics.rs  patterns.rs  probe.rs
src/ohhi-data/tests/: catalog.rs  invariance.rs  metrics.rs  patterns.rs  probe.rs  thresholds.rs
src/ohhi-generator/: Cargo.toml
src/ohhi-generator/src/: combos.rs  lib.rs  practice.rs  reduce.rs
src/ohhi-generator/src/full/: mod.rs  og.rs  toolkit.rs
src/ohhi-generator/tests/: oracles.rs  practice.rs
src/ohhi-gui/: Cargo.toml
src/ohhi-gui/src/: app.rs  main.rs  render.rs  seed.rs  state.rs
src/ohhi-solver/: Cargo.toml
src/ohhi-solver/src/: backtrack.rs  carver.rs  deduction.rs  lib.rs  structs.rs
src/ohhi-solver/src/v1/: deduction.rs  mod.rs
src/ohhi-solver/src/v2/: diff.rs  line_solver.rs  mod.rs  propagate.rs
src/ohhi-solver/tests/: backtrack.rs  deduction.rs  diff.rs  differential.rs  line_solver.rs  propagate.rs  structs.rs
src/ohhi-solver/tests/common/: mod.rs
src/ohhi-ui/: Cargo.toml  Dioxus.toml
src/ohhi-ui/src/: main.rs  storage.rs
src/ohhi-ui/src/components/: analysis.rs  board.rs  mod.rs  patterns.rs  play.rs  practice.rs  stats.rs
