[package]
name = "ohhi-ui"
version = "0.1.0"
edition = "2024"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]

[dependencies]
dioxus = { version = "0.6", default-features = false, features = ["macro", "html", "signals", "hooks", "launch", "logger"] }
ohhi-app = { path = "../ohhi-app" }
ohhi-core = { path = "../ohhi-core" }
ohhi-data = { version = "0.1.0", path = "../ohhi-data" }
ohhi-solver = { path = "../ohhi-solver" }
serde_json = "1.0.150"
tokio = { version = "1", features = ["time"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
